# biocenozzz

./: .gitmodules  CMakeLists.txt  README.md  scheme.mmd  scheme.txt  xmake.lua
docs/: scheme.mmd
gui/: CMakeLists.txt  main.qml
src/: EntityManager.hpp  FlockManager.hpp  entity.cpp  entity.hpp  flock.cpp  flock.hpp  main.cpp  reproduction_strategy.hpp  simulation.hpp  species.hpp  world.hpp
src/core/: EntityManager.hpp  entity.cpp  entity.hpp  entity_factory.cpp  entity_factory.hpp  flock.hpp  logger.cpp  logger.hpp  quuid_hash.hpp  simulation.cpp  species.hpp  species_worker.cpp  species_worker.hpp  world.cpp  world.hpp
src/core/SpatialSubdivision/: cell.cpp  cell.hpp  spatial_subdiv_solver.cpp  spatial_subdiv_solver.hpp
src/server/: server.cpp  server.hpp
